--- a/app/build.gradle
+++ b/app/build.gradle
@@ -60,4 +60,6 @@ dependencies {
     platform('com.google.firebase:firebase-bom:29.0.1')
     implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0'
     implementation 'com.google.android.libraries.places:places:2.5.0'
+    implementation 'com.karumi:dexter:6.0.2'
+    implementation 'com.android.volley:volley:1.2.1'
 }
